# asstrok

./: .gitignore  Makefile  README.md  golden_test.py  pyproject.toml  scheme.drawio  test.py
.github/workflows/: ci.yml
examples/: cat.asm  cat.input  hello.asm  hello_user.asm  hello_user.input  input.txt  my_program.asm  prob1.asm  test.asm
golden/: cat.yml  hello.yml  hello_user.yml
src/: compiler.py  control_unit.py  datapath.py  io_controller.py  isa.py  machine.py  machine_signals.py
tests/: test_compiler.py  test_control_unit.py  test_datapath.py  test_golden.py  test_isa.py
